--- a/configs/A1/trot.yaml
+++ b/configs/A1/trot.yaml
@@ -1,4 +1,4 @@
-num_envs: 4
+num_envs: 300
 num_eval_envs: 32
 lr: 0.0003
 max_it: 100
@@ -15,5 +15,6 @@ reward_scaling: 0.02
 rot_weight: 0.5
 vel_weight: 0.01
 ang_weight: 0.01
+n_frames: 5
 
 ref: data/demo_a1/trot.npy
