--- a/configs/A1/trot.yaml
+++ b/configs/A1/trot.yaml
@@ -1,15 +1,15 @@
-num_envs: 32
+num_envs: 128
 num_eval_envs: 32
-lr: 0.0003
+lr: 0.0001
 max_it: 1000
 max_grad_norm: 0.4
 seed: 0
-demo_replay_mode: threshold
+demo_replay_mode: random
 threshold: 0.04
 normalize_observations: True
 cycle_len: 54
-ep_len: 60
-ep_len_eval: 600
+ep_len: 54
+ep_len_eval: 54
 use_lr_scheduler: True
 reward_scaling: 0.02
 rot_weight: 0.5
