--- a/configs/A1/jump_backward_flip_0.05.yaml
+++ b/configs/A1/jump_backward_flip_0.05.yaml
@@ -1,14 +1,14 @@
-num_envs: 32
+num_envs: 128
 num_eval_envs: 32
 lr: 0.0003
 max_it: 1000
 max_grad_norm: 0.4
 seed: 0
-demo_replay_mode: random
-threshold: 0.04
+demo_replay_mode: threshold
+threshold: 0.4
 normalize_observations: True
 cycle_len: 54
-ep_len: 54
+ep_len: 25
 ep_len_eval: 54
 use_lr_scheduler: True
 reward_scaling: 0.02
