--- a/configs/A1/jump08_0.05.yaml
+++ b/configs/A1/jump08_0.05.yaml
@@ -1,15 +1,15 @@
-num_envs: 96
+num_envs: 128
 num_eval_envs: 32
 lr: 0.0003
 max_it: 1000
 max_grad_norm: 0.4
 seed: 0
 demo_replay_mode: threshold
-threshold: 0.4
+threshold: 0.5
 normalize_observations: True
-cycle_len: 14 # 115/8
-ep_len: 30
-ep_len_eval: 60
+cycle_len: 22 # 176/8
+ep_len: 22
+ep_len_eval: 30
 use_lr_scheduler: True
 reward_scaling: 0.02
 rot_weight: 0.5
@@ -17,4 +17,4 @@ vel_weight: 0.01
 ang_weight: 0.01
 n_frames: 25
 
-ref: data/demo_a1/walk03_0.05.npy # (115, 739)
+ref: data/demo_a1/jump08_0.05.npy # (176, 739)
