--- a/configs/A1/jump08_20Hz.yaml
+++ b/configs/A1/jump08_20Hz.yaml
@@ -1,4 +1,4 @@
-num_envs: 96
+num_envs: 128
 num_eval_envs: 32
 lr: 0.0003
 max_it: 1000
@@ -7,7 +7,7 @@ seed: 0
 demo_replay_mode: threshold
 threshold: 0.5
 normalize_observations: True
-cycle_len: 30
+cycle_len: 22 # 176/8
 ep_len: 30
 ep_len_eval: 40
 use_lr_scheduler: True
@@ -15,6 +15,6 @@ reward_scaling: 0.02
 rot_weight: 0.5
 vel_weight: 0.01
 ang_weight: 0.01
-n_frames: 20 # 0.04
+n_frames: 25
 
-ref: data/demo_a1/jump08_0.04.npy # (219, 739)
+ref: data/demo_a1/jump08_20Hz.npy # (176, 739)
