--- a/configs/A1/jump_backward_flip_20Hz.yaml
+++ b/configs/A1/jump_backward_flip_20Hz.yaml
@@ -1,7 +1,7 @@
-num_envs: 95
+num_envs: 64
 num_eval_envs: 32
 lr: 0.0003
-max_it: 1000
+max_it: 500
 max_grad_norm: 0.4
 seed: 0
 demo_replay_mode: threshold
@@ -12,6 +12,7 @@ ep_len: 30
 ep_len_eval: 44
 use_lr_scheduler: True
 reward_scaling: 0.02
+pos_weight: 1.0
 rot_weight: 0.5
 vel_weight: 0.01
 ang_weight: 0.01
