--- a/configs/A1/jump_backward_flip_50Hz.yaml
+++ b/configs/A1/jump_backward_flip_50Hz.yaml
@@ -1,10 +1,10 @@
 num_envs: 60
 num_eval_envs: 32
 lr: 0.0003
-max_it: 1000
+max_it: 500
 max_grad_norm: 0.4
 seed: 0
-demo_replay_mode: random
+demo_replay_mode: threshold
 threshold: 0.4
 normalize_observations: True
 cycle_len: 108
@@ -12,6 +12,7 @@ ep_len: 60
 ep_len_eval: 108
 use_lr_scheduler: True
 reward_scaling: 0.02
+pos_weight: 1
 rot_weight: 0.5
 vel_weight: 0.01
 ang_weight: 0.01
