--- a/configs/A1/trot_50Hz.yaml
+++ b/configs/A1/trot_50Hz.yaml
@@ -1,20 +1,21 @@
 num_envs: 32
 num_eval_envs: 32
 lr: 0.0003
-max_it: 1000
+max_it: 500
 max_grad_norm: 0.4
 seed: 0
-demo_replay_mode: random
+demo_replay_mode: threshold
 threshold: 0.4
 normalize_observations: True
 cycle_len: 35
-ep_len: 20
+ep_len: 35
 ep_len_eval: 35
 use_lr_scheduler: True
 reward_scaling: 0.02
+pos_weight: 1
 rot_weight: 0.5
 vel_weight: 0.01
 ang_weight: 0.01
-n_frames: 20
+n_frames: 15
 
 ref: data/demo_a1/trot_50Hz.npy # (32, 739)
